random changes in html and css

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Exo&family=Kanit:wght@300&family=Kite+One&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Exo&family=Kanit:wght@300&family=Kite+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <h1 class="textcenter">Honningmarineret laks til ovn eller grill</h1>
+      <h1 class="container" id="header">
+        Honningmarineret laks til ovn eller grill
+      </h1>
     </header>
     <nav id="nav">
       <ul>
@@ -31,62 +34,55 @@
     />
 
     <p></p>
-    <section id="Beskrivelse">
-      <article>
-        <h2>Beskrivelse:</h2>
-        Honningmarineret laks med citron og timian er en sund og smagsfuld
-        aftensmad som samtidig er let at lave.
-        <p>
-          Stegetiden er kun ca. 15 minutter og arbejdstiden i køkkenet er ikke
-          meget mere end 10 minutter.
-        </p>
-      </article>
+    <section class="container" id="Beskrivelse">
+      <h2>Beskrivelse:</h2>
+      Honningmarineret laks med citron og timian er en sund og smagsfuld
+      aftensmad som samtidig er let at lave. <br />
+      Stegetiden er kun ca. 15 minutter og arbejdstiden i køkkenet er ikke meget
+      mere end 10 minutter.
     </section>
 
-    <section id="Ingredienser">
+    <section class="container" id="Ingredienser">
       <h2>Du skal bruge de følgende ingredienser:</h2>
-      <article>
-        <ul>
-          <li>1 lakseside 750 gram</li>
-          <li>3 fed hvidløg</li>
-          <li>1 citron</li>
-          <li>3 spiseskefulde akaciehonning</li>
-          <li>1 bundt timian</li>
-          <li>2 spiseskefulde olivenolie</li>
-          <li>Flagesalt og frisk peber</li>
-        </ul>
-      </article>
+      <ul>
+        <li>1 lakseside på ca. 750 gram</li>
+        <li>3 fed hvidløg</li>
+        <li>1 citron</li>
+        <li>3 spiseskefulde akaciehonning</li>
+        <li>1 bundt timian</li>
+        <li>2 spiseskefulde olivenolie</li>
+        <li>Flagesalt og frisk peber</li>
+      </ul>
     </section>
 
-    <section id="how">
-      <article>
-        <h2>Sådan gør du:</h2>
-        <ol>
-          <li>Tænd din ovn og sæt den på 200 graders varmluft</li>
-          <li>
-            Tag derefter din hele side laks og læg den på et stykke sølvpapir
-            med siderne bukket op (du kan også bruge en alubakke).
-          </li>
-          <li>Hæld derefter 2 spiseskefulde olivenolie i en skål.</li>
-          <li>
-            Tag derefter og halver din citron. Den ene halvdel presser du ned i
-            skålen med olie, og den anden skærer du i skiver.
-          </li>
-          <li>
-            Kom derefter 3 spiseskefulde akaciehonning i skålen sammen med
-            finthakket timian
-          </li>
-          <li>
-            Pres derefter 3 fed hvidløg i skålen og rør indholdet godt sammen
-          </li>
-          <li>Smør nu honningmarinaden godt ud på laksen</li>
-          <li>
-            Krydr derefter laksen med flagesalt og frisk peber og læg
-            citronskiver samt noget plukket timian på
-          </li>
-          <li>Laksen skal nu tilberedes i ovnen i ca. 15 minutter</li>
-        </ol>
-      </article>
+    <section class="container" id="how">
+      <h2>Sådan gør du:</h2>
+      <ol>
+        <li>Tænd din ovn og sæt den på 200 graders varmluft</li>
+        <li>
+          Tag derefter din laks og læg den på et stykke sølvpapir med siderne
+          bukket op.
+        </li>
+        <li>
+          Hæld derefter 2 spiseskefulde olivenolie i en skål og pres en halv
+          citron oveni.
+        </li>
+        <li>
+          Kom derefter 3 spiseskefulde akaciehonning i skålen sammen med
+          finthakket timian, og pres 3 fed hvidløg i og rør indholdet godt
+          sammen.
+        </li>
+        <li>Smør nu honningmarinaden godt ud på laksen</li>
+        <li>Krydr derefter laksen med flagesalt og frisk peber.</li>
+        <li>
+          Skær den anden halvdel af citronen i skiver og fordel skiverne ud på
+          laksen samt en håndfuld friskplukket timian.
+        </li>
+        <li>
+          Laksen skal nu tilberedes i ovnen i ca. 15 minutter og er derefter
+          klar til spisning.
+        </li>
+      </ol>
     </section>
 
     <img
@@ -94,7 +90,9 @@
       alt="OVN"
     />
 
-    <footer>Opskrift til honningmarineret laks - 2023 Benjamin Harris</footer>
+    <footer class="container">
+      Opskrift til honningmarineret laks - 2023 Benjamin Harris
+    </footer>
 
     <script src="app.js"></script>
   </body>
