--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
         aftensmad som samtidig er let at lave. <br />
         Stegetiden er kun ca. 15 minutter og arbejdstiden i køkkenet er ikke
         meget mere end 10 minutter.
-        <p>
-          <h2>
-            <br>
-            Stegetid:
-          </h2>
-          <ul>
-            <li>Grill: 15 minutter ved 200 graders varme.</li>
-            <li>Ovn: 15 minutter ved 190 grader på varmluft.</li>
-          </ul>
-        </p>
+        <h2>
+          <br />
+          Stegetid:
+        </h2>
+        <ul>
+          <li>Grill: 15 minutter ved 200 graders varme</li>
+          <li>Ovn: 15 minutter ved 190 graders varmluft.</li>
+        </ul>
       </section>
       <div>
         <div class="grid-item">
@@ -96,8 +94,11 @@
       </section>
 
       <footer class="grid-item">
-        Opskrift til honningmarineret laks - tyvstjålet
-        fra madensverden, her er <a href="https://madensverden.dk/honningmarineret-laks-til-grill-og-ovn/">linket</a>
+        Opskrift til honningmarineret laks - tyvstjålet fra madensverden, her er
+        <a
+          href="https://madensverden.dk/honningmarineret-laks-til-grill-og-ovn/"
+          >linket</a
+        >
       </footer>
     </main>
     <script src="app.js"></script>
