--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           Stegetid:
         </h2>
         <ul>
-          <li>Grill: 15 minutter ved 200 graders varme</li>
+          <li>Grill: 15 minutter ved 200 graders varme.</li>
           <li>Ovn: 15 minutter ved 190 graders varmluft.</li>
         </ul>
       </section>
@@ -80,7 +80,7 @@
             finthakket timian, og pres 3 fed hvidløg i og rør indholdet godt
             sammen.
           </li>
-          <li>Smør nu honningmarinaden godt ud på laksen</li>
+          <li>Smør nu honningmarinaden godt ud på laksen.</li>
           <li>Krydr derefter laksen med flagesalt og frisk peber.</li>
           <li>
             Skær den anden halvdel af citronen i skiver og fordel skiverne ud på
